added Unsigned and DisposalMethod, moved GlobalColorTable to its own file, and made SubBlock a record